cambios al footer

--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
 
     <footer class="contacto">
         <h2>Contacto</h2>
+        <a> <i class="fab fa-whatsapp"></i> +526778790329</a>
+        <a href="https://github.com/RickGarArr" target="_blank"> <i class="fab fa-github"></i> https://github.com/RickGarArr</a>
+        <a> <i class="fa fa-envelope"></i> ricardogarciarreola@gmail.com</a>
     </footer>
     <script src="./js/jquery.js"></script>
     <script src="./js/scripts.js"></script>
