pagina finalizada (prospecto)

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <div class="site-hero"></div>
         <div class="contenido-header contenedor">
             <nav class="nav-header">
-                <a id="0" href="0">acerca de mi</a>
-                <a id="1" href="1">conocimientos</a>
-                <a id="2" href="2">habilidades</a>
-                <a id="3" href="3">contacto</a>
+                <a href="#sobre-mi">acerca de mi</a>
+                <a href="#conocimientos">conocimientos</a>
+                <a href="#habilidades">habilidades</a>
+                <a href="#contacto">contacto</a>
             </nav>
             <div class="info">
                 <h1>Ricardo <span>Garcia</span></h1>
@@ -50,7 +50,7 @@
         </div>
     </main>
     
-    <section class="conocimientos parallax">
+    <section id="conocimientos" class="conocimientos parallax">
         <div class="contenedor">
             <h2>Mis Conocimientos</h2>
             <div class="galeria">
@@ -82,7 +82,7 @@
         </div>
     </section>
 
-    <div class="habilidades">
+    <div id="habilidades" class="habilidades">
         <div class="contenedor contenido-habilidades">
             <h2>Mis Habilidades</h2>
             <ul>
@@ -114,11 +114,13 @@
         </div>
     </div>
 
-    <footer class="contacto">
+    <footer id="contacto" class="contacto">
         <h2>Contacto</h2>
-        <a> <i class="fab fa-whatsapp"></i> +526778790329</a>
-        <a href="https://github.com/RickGarArr" target="_blank"> <i class="fab fa-github"></i> https://github.com/RickGarArr</a>
-        <a> <i class="fa fa-envelope"></i> ricardogarciarreola@gmail.com</a>
+        <nav class="footer-nav">
+            <a href="https://wa.me/6778790329"> <i class="fab fa-whatsapp"></i> +526778790329</a>
+            <a href="https://github.com/RickGarArr" target="_blank"> <i class="fab fa-github"></i> https://github.com/RickGarArr</a>
+            <a href="mailto:ricardogarciarreola@gmail.com"> <i class="fa fa-envelope"></i> ricardogarciarreola@gmail.com</a>
+        </nav>
     </footer>
     <script src="./js/jquery.js"></script>
     <script src="./js/scripts.js"></script>
