--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
                 <div class="habilidad">
                     <img src="./img/C-Sharp.png" alt="logo de csharp">
                 </div>
+                <div class="habilidad">
+                    <img src="./img/java.png" alt="logo de java">
+                </div>
             </div>
         </div>
     </section>
@@ -118,8 +121,8 @@
         <h2>Contacto</h2>
         <nav class="footer-nav">
             <a href="https://wa.me/6778790329"> <i class="fab fa-whatsapp"></i> +526778790329</a>
-            <a href="https://github.com/RickGarArr" target="_blank"> <i class="fab fa-github"></i> https://github.com/RickGarArr</a>
             <a href="mailto:ricardogarciarreola@gmail.com"> <i class="fa fa-envelope"></i> ricardogarciarreola@gmail.com</a>
+            <a href="https://github.com/RickGarArr" target="_blank"> <i class="fab fa-github"></i> https://github.com/RickGarArr</a>
         </nav>
     </footer>
     <script src="./js/jquery.js"></script>
