cambiando nav-header

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <a href="#conocimientos">conocimientos</a>
                 <a href="#habilidades">habilidades</a>
                 <a href="#contacto">contacto</a>
+                <a href="https://github.com/RickGarArr" target="_blank"><i class="fab fa-github"></i> Github</a>
             </nav>
             <div class="info">
                 <h1>Ricardo <span>Garcia</span></h1>
@@ -122,7 +123,6 @@
         <nav class="footer-nav">
             <a href="https://wa.me/526771193284"> <i class="fab fa-whatsapp"></i> +526771193284</a>
             <a href="mailto:ricardogarciarreola@gmail.com"> <i class="fa fa-envelope"></i> ricardogarciarreola@gmail.com</a>
-            <a href="https://github.com/RickGarArr" target="_blank"> <i class="fab fa-github"></i> https://github.com/RickGarArr</a>
         </nav>
     </footer>
     <script src="./js/jquery.js"></script>
