corrigiendo enlace a github

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a href="#conocimientos">conocimientos</a>
                 <a href="#habilidades">habilidades</a>
                 <a href="#contacto">contacto</a>
-                <a href="https://github.com/RickGarArr" target="_blank"><i class="fab fa-github"></i> Github</a>
+                <a href="https://github.com/RickGarArr"><i class="fab fa-github"></i> Github</a>
             </nav>
             <div class="info">
                 <h1>Ricardo <span>Garcia</span></h1>
