--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <div class="left-side"></div>
         <div class="right-side"></div>
     </div>
+
     <header class="site-header">
         <div class="site-hero"></div>
         <nav class="nav-header">
@@ -38,19 +39,20 @@
                 <a href="#contacto">contacto</a>
             </div>
         </nav>
+
         <div class="contenido-header contenedor">
             <div class="info">
                 <h1>Ricardo <span><strong>Garcia</strong></span></h1>
                 <h1 class="animate_text"><span>Desarrollador JR</span></h1>
             </div>
         </div>
-        <div class="arrow-wrap bounce anchor">
-            <a href="#sobre-mi"><i class="fa fa-arrow-down"></i></a>
+        <div class="arrow-wrap anchor">
+            <a href="#sobre-mi"><i class="bounce fa fa-arrow-down"></i></a>
         </div>
     </header>
     
     <main id="sobre_mi" class="section">
-        <div class="contenedor">
+        <div class="contenedor fade_in">
             <h2 id="sobre-mi">Sobre Mi</h2>
             <div class="informacion">
                 <div class="perfil">
@@ -63,13 +65,13 @@
                 </div>
             </div>
             <div class="boton">
-                <a class="btn-descargar" href="./files/Currículum_Ricardo_Garcia_Arreola.pdf" download="Currículum_Ricardo_Garcia_Arreola.pdf">Descargar CV</a>
+                <a class="btn-descargar" target="_blank" href="./files/Currículum_Ricardo_Garcia_Arreola.pdf" >Descargar CV</a>
             </div>
         </div>
     </main>
     
     <section id="conocimientos" class="conocimientos parallax">
-        <div class="contenedor">
+        <div class="contenedor fade_in">
             <h2>Mis Conocimientos</h2>
             <div class="galeria">
                 <div class="habilidad">
@@ -104,7 +106,7 @@
     </section>
 
     <div id="habilidades" class="habilidades">
-        <div class="contenedor contenido-habilidades">
+        <div class="contenedor contenido-habilidades fade_in">
             <h2>Mis Habilidades</h2>
             <ul>
                 <li>
