actualizacion de los enlaces de cards

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </div>
     </section> -->
 
-    <div id="habilidades" class="habilidades">
+    <div id="habilidades" class="habilidades parallax">
         <div class="contenedor contenido-habilidades fade_in">
             <h2>Mis Habilidades</h2>
             <ul>
@@ -135,6 +135,7 @@
             <div class="cards">
 
                 <div class="card">
+                    <span class="etiqueta green">Proyecto de Curso</span>
                     <div class="card-content">
                         <div class="card-header">
                             <i class="fab fa-react spin icon-blue"></i>
@@ -142,10 +143,10 @@
                         </div>
                         <div class="card-description">
                             <div class="descripcion">
-                                <p>Interfáz basica de un buscador de personal</p>
+                                <p>HTML, CSS, JavaScript, Fetch y Axios</p>
                             </div>
                             <div class="tecnologias">
-                                <p>HTML, CSS, JavaScript, Fetch y Axios</p>
+                                <p>Interfáz basica de un buscador de personal</p>
                             </div>
                         </div>
                         <a href="https://github.com/RickGarArr/ReactJS-buscador_local" target="_blank" class="btn-ver-mas">Ver Mas</a>
@@ -153,6 +154,7 @@
                 </div>
 
                 <div class="card">
+                    <span class="etiqueta blue">Proyecto Personal</span>
                     <div class="card-content">
                         <div class="card-header">
                             <i class="fab fa-node-js spin icon-green"></i>
@@ -160,23 +162,19 @@
                         </div>
                         <div class="card-description">
                             <div class="descripcion">
-                                <p>Jsonwebtoken</p>
-                                <p>Multer</p>
-                                <p>BCrypt</p>
-                                <p>Express-validator</p>
-                                <p>MySQL</p>
-                                <p>TypeScript</p>
+                                <p>Jsonwebtoken, Multer, BCrypt, Express-validator, MySQL, TypeScript</p>
                             </div>
                             <div class="tecnologias">
                                 <p>Backend en express y MySQL, control de acceso, subida y validación de archivos,
                                     encriptacion de password, pool de conexiones a MySQL</p>
                             </div>
                         </div>
-                        <a class="btn-ver-mas">Ver Mas</a>
+                        <a href="https://github.com/RickGarArr/Express_MySQL" target="_blank" class="btn-ver-mas">Ver Mas</a>
                     </div>
                 </div>
 
                 <div class="card">
+                    <span class="etiqueta green">Proyecto de Curso</span>
                     <div class="card-content">
                         <div class="card-header">
                             <i class="fab fa-node-js spin icon-green"></i>
@@ -184,19 +182,18 @@
                         </div>
                         <div class="card-description">
                             <div class="descripcion">
-                                <p>SocketIO</p>
-                                <p>TypeScript</p>
-                                <p>Express</p>
+                                <p>SocketIO, Express, TypeScript</p>
                             </div>
                             <div class="tecnologias">
                                 <p>Backend sencillo de integración de sockets a servidor REST</p>
                             </div>
                         </div>
-                        <a class="btn-ver-mas">Ver Mas</a>
+                        <a href="https://github.com/RickGarArr/Express-socket_io_server" target="_blank" class="btn-ver-mas">Ver Mas</a>
                     </div>
                 </div>
 
                 <div class="card">
+                    <span class="etiqueta green">Proyecto de Curso</span>
                     <div class="card-content">
                         <div class="card-header">
                             <i class="fab fa-angular spin icon-red"></i>
@@ -204,19 +201,18 @@
                         </div>
                         <div class="card-description">
                             <div class="descripcion">
-                                <p>SocketIO - client</p>
-                                <p>TypeScript</p>
-                                <p>Express</p>
+                                <p>SocketIO - client, TypeScript</p>
                             </div>
                             <div class="tecnologias">
                                 <p>Frontend sencillo. Integración a servidor de sockets</p>
                             </div>
                         </div>
-                        <a class="btn-ver-mas">Ver Mas</a>
+                        <a href="https://github.com/RickGarArr/Angular-socket_io_client" target="_blank" class="btn-ver-mas">Ver Mas</a>
                     </div>
                 </div>
 
                 <div class="card">
+                    <span class="etiqueta blue">Proyecto Personal</span>
                     <div class="card-content">
                         <div class="card-header">
                             <i class="fab fa-java spin icon-orange"></i>
@@ -224,11 +220,7 @@
                         </div>
                         <div class="card-description">
                             <div class="descripcion">
-                                <p>Servlets</p>
-                                <p>Subida y validación de archivos</p>
-                                <p>Encriptacion de password</p>
-                                <p>Conexión a MySQL</p>
-                                <p>JDBC</p>
+                                <p>Servlets, Subida y validación de archivos, Encriptacion de password, Conexión a MySQL</p>
                             </div>
                             <div class="tecnologias">
                                 <p>Backend en Java y MySQL, subida y validación de archivos,
@@ -236,11 +228,12 @@
                                     Controladores</p>
                             </div>
                         </div>
-                        <a class="btn-ver-mas">Ver Mas</a>
+                        <a href="https://github.com/RickGarArr/JAVA-marketplace_web_service" target="_blank" class="btn-ver-mas">Ver Mas</a>
                     </div>
                 </div>
 
                 <div class="card">
+                    <span class="etiqueta blue">Proyecto Personal</span>
                     <div class="card-content">
                         <div class="card-header">
                             <i class="fab fa-angular spin icon-red"></i>
@@ -248,14 +241,13 @@
                         </div>
                         <div class="card-description">
                             <div class="descripcion">
-                                <p>Roles de Usuarios</p>
-                                <p>Subida y validación de archivos</p>
+                                <p>Roles de Usuarios, Subida y validación de archivos</p>
                             </div>
                             <div class="tecnologias">
                                 <p>Aplicacion web frontend, integración con servidor java</p>
                             </div>
                         </div>
-                        <a class="btn-ver-mas">Ver Mas</a>
+                        <a href="https://github.com/RickGarArr/WEB_Angular-marketplace" target="_blank" class="btn-ver-mas">Ver Mas</a>
                     </div>
                 </div>
 
